--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backmelarik",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js"
@@ -10,9 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "node-cron": "^3.0.3",
     "sequelize": "^6.37.3",
