--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "backmelarik",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
