--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backmelarik",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
   },
