--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -21,7 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.10.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
   },
